--- a/styles.css
+++ b/styles.css
@@ -1999,8 +1999,8 @@ section {
     display: flex;
     float:left;
     min-width:25%;
-    color: white;
-    background:black;
+    color: rgb(0, 0, 0);
+    background:rgba(65, 109, 243, 0.305);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     list-style:none;
     height: 4rem;
@@ -2013,8 +2013,8 @@ section {
   
   nav > ul > li:hover {
     border-radius: 3px;
-    background-color: blue;
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     cursor: pointer;
   }
   
