--- a/styles.css
+++ b/styles.css
@@ -1455,7 +1455,7 @@ section {
   }
 
   #welcome-section {
-    background-image: linear-gradient(to bottom, blue, white);
+    background-image: linear-gradient(to bottom, rgb(143, 171, 255), white);
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -1944,7 +1944,7 @@ section {
   }
 
   .contact {
-    background-image: linear-gradient(to top, blue, white);
+    background-image: linear-gradient(to top, rgb(143, 171, 255), white);
     padding-top: 2rem;
     justify-content: center;
     align-items: center;
