--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   white-space: nowrap;
   border: 2px solid black;
-  color: white;
+  color: black;
   background-color: rgb(143, 171, 255);
   text-align: center;
   border-radius: 7.5px;
@@ -90,7 +90,7 @@
   white-space: nowrap;
   border: 2px solid black;
   color: rgb(143, 171, 255);
-  background-color: white;
+  background-color: black;
   text-align: center;
   border-radius: 7.5px;
   font-size: 0.95rem;
@@ -376,7 +376,7 @@ section {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   white-space: nowrap;
   border: 2px solid black;
-  color: white;
+  color: black;
   background-color: rgb(143, 171, 255);
   text-align: center;
   border-radius: 7.5px;
@@ -404,7 +404,7 @@ section {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   white-space: nowrap;
   border: 2px solid black;
-  color: white;
+  color: black;
   background-color: rgb(143, 171, 255);
   text-align: center;
   border-radius: 7.5px;
@@ -1177,7 +1177,7 @@ section {
 
   .form {
     border-radius: 5px;
-    background-color: white;
+    background-color: black;
     padding: 3rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
@@ -1246,7 +1246,7 @@ section {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     white-space: nowrap;
     border: 2px solid black;
-    color: white;
+    color: black;
     background-color: rgb(143, 171, 255);
     border-radius: 7.5px;
     text-align: center;
@@ -1303,7 +1303,7 @@ section {
     font-weight: 700;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border: 2px solid black;
-    color: white;
+    color: black;
     background-color: rgb(143, 171, 255);
     border-radius: 7.5px;
     text-align: center;
@@ -1364,7 +1364,6 @@ section {
     background-color: white;
     margin-left: auto;
     margin-right: auto;
-    
   }
 
   #welc-about {
