--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
   .round-image { 
     padding-top: 7rem;
+    border-style: solid;
     height: 250px;
     width: 250px;
     border-radius: 50%;
