--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,9 @@
   .round-image { 
     padding-top: 7rem;
     border-style: solid;
-    height: 550px;
-    width: 550px;
+    border-color: rgba(0, 0, 0, 0.41);
+    height: 750px;
+    width: 750px;
     border-radius: 50%;
    }
 
