--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
 
   .round-image { 
     padding-top: 7rem;
-    height: 750px;
-    width: 550px;
+    height: 100px;
+    width: 130px;
     border-radius: 50%;
    }
 
@@ -21,6 +21,13 @@
   line-height: 1.5;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+.round-image { 
+  padding-top: 7rem;
+  height: 200px;
+  width: 150px;
+  border-radius: 50%;
+ }
 
 .textLeft {
   font-weight: normal;
@@ -134,6 +141,13 @@ section {
       font-size: 1.25rem;
     }
 
+    .round-image { 
+      padding-top: 7rem;
+      height: 200px;
+      width: 150px;
+      border-radius: 50%;
+     }
+
     .textLeft {
       font-size: 0.95rem;
     }
@@ -174,6 +188,13 @@ section {
     #about3 {
       font-size: 1.25rem;
     }
+
+    .round-image { 
+      padding-top: 7rem;
+      height: 267px;
+      width: 200px;
+      border-radius: 50%;
+     }
 
     .textLeft {
       font-size: 0.95rem;
@@ -216,6 +237,13 @@ section {
       font-size: 1.5rem;
     }
 
+    .round-image { 
+      padding-top: 7rem;
+      height: 300px;
+      width: 400px;
+      border-radius: 50%;
+     }
+
     .textLeft {
       font-size: 0.95rem;
     }
@@ -257,6 +285,13 @@ section {
       font-size: 1.75rem;
     }
 
+    .round-image { 
+      padding-top: 7rem;
+      height: 533px;
+      width: 400px;
+      border-radius: 50%;
+     }
+
     .textLeft {
       font-size: 1.2rem;
     }
@@ -297,6 +332,13 @@ section {
     .about3 {
       font-size: 1.75rem;
     }
+
+    .round-image { 
+      padding-top: 7rem;
+      height: 733px;
+      width: 550px;
+      border-radius: 50%;
+     }
 
     .textLeft {
       font-size: 1.2rem;
