--- a/styles.css
+++ b/styles.css
@@ -1205,6 +1205,7 @@ section {
       width: 100%;
       justify-content: center;
       align-items: center;
+      text-align: center;
     }
 }
 
