--- a/styles.css
+++ b/styles.css
@@ -386,7 +386,8 @@ section {
 }
 
   /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
-.about3 {
+/*loc*/
+  .about3 {
   font-size: 1.25rem;
   font-weight: strong;
   text-align: center;
@@ -585,7 +586,7 @@ section {
       font-size: 0.95rem;
     }
 
-    .project1-left {
+    /* .project1-left {
       width: 100%;
       justify-content: center;
       align-items: center;
@@ -679,7 +680,7 @@ section {
       width: 100%;
       justify-content: center;
       align-items: center;
-    }
+    } */
 }
 
 @media (min-width:641px) {
@@ -740,7 +741,7 @@ section {
       font-size: 0.95rem;
     }
 
-    .project1-left {
+    /* .project1-left {
       width: 100%;
       justify-content: center;
       align-items: center;
@@ -834,7 +835,7 @@ section {
       width: 100%;
       justify-content: center;
       align-items: center;
-    }
+    } */
 }
 
 @media (min-width:961px) { 
@@ -895,7 +896,7 @@ section {
       font-size: 0.95rem;
     }
 
-    .project1-left {
+    /* .project1-left {
       width: 100%;
       justify-content: center;
       align-items: center;
@@ -989,7 +990,7 @@ section {
       width: 100%;
       justify-content: center;
       align-items: center;
-    }
+    } */
 }
 
 @media (min-width:1025px) {
@@ -1111,7 +1112,7 @@ section {
       font-size: 1.2rem;
     }
 
-    .project1-left {
+    /* .project1-left {
       width: 100%;
       justify-content: center;
       align-items: center;
@@ -1206,7 +1207,7 @@ section {
       justify-content: center;
       align-items: center;
       text-align: center;
-    }
+    } */
 }
 
 .skills-container {
