--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ section {
 
 .image {
   margin: 0;
-  padding: 0;
+  padding-bottom: 1rem;
   justify-content: space-between;
   align-items: center;
   display: flex;
