--- a/styles.css
+++ b/styles.css
@@ -339,21 +339,6 @@ section {
 
 @media (min-width:1281px) { 
     /* hi-res laptops and desktops */ 
-
-    .image {
-      margin: 0;
-      padding-bottom: 1.5rem;
-      padding-left: 1rem;
-      padding-right: 1rem;
-      justify-content: space-between;
-      align-items: center;
-      display: flex;
-      float: left;
-      flex-wrap: nowrap;
-      max-width: 30%;
-      max-height: 50%;
-    }
-
     .about3 {
       font-size: 1.75rem;
     }
@@ -541,6 +526,22 @@ section {
   font-size: 0.75rem;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   letter-spacing: 1px;
+}
+
+@media (min-width:1400px) {
+  .image {
+    margin: 0;
+    padding-bottom: 1.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    float: left;
+    flex-wrap: nowrap;
+    max-width: 30%;
+    max-height: 50%;
+  }
 }
 
 @media (min-width:481px) {
